youtube webpage update 1

--- a/TailWindProject2/index.html
+++ b/TailWindProject2/index.html
@@ -18,11 +18,6 @@
             .widthl {
                 width: screen;
             }
-
-            .mar {
-                margin: 20px;
-                display: inline;
-            }
         }
 
         @media (max-width: 500px) {
@@ -37,12 +32,6 @@
             }
         }
 
-        @media(max-width:fullscreen) {
-            .lt {
-                width: screen;
-                width: 100%;
-            }
-        }
     </style>
     <script src='https://kit.fontawesome.com/a076d05399.js' crossorigin='anonymous'></script>
 </head>
@@ -312,34 +301,15 @@
 
 
 
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
         <div class="w-full my-5 sm:mr-10">
             <div class="flex flex-wrap items-center w-full gap-3 justify-evenly">
                 <div class=" widthl">
-                    <a href="flex flex-col">
+                    <a href="playtab.html?video=Iry8fAYMD48" class="flex flex-col">
                         <div class="">
                             <img src="images/thumbnails/t5.png" alt="" class="w-full rounded-2xl">
                         </div>
                         <div class="flex">
-                            <a href="index.html" class="flex items-center gap-2 p-4">
+                            <a href="playtab.html?video=r4EqfjMsP48" class="flex items-center gap-2 p-4">
                                 <div class="w-10 h-10"><img src="images/Channels/telusko.png" alt=""
                                         class="h-10 rounded-full "></div>
                                 <div class="text-start">
@@ -351,7 +321,7 @@
                     </a>
                 </div>
                 <div class="py-4 widthl">
-                    <a href="flex flex-col">
+                    <a href="playtab.html?video=Iry8fAYMD48" class="flex flex-col">
                         <div class="">
                             <img src="images/thumbnails/t1.png" alt="" class="w-full rounded-2xl">
                         </div>
@@ -368,7 +338,7 @@
                     </a>
                 </div>
                 <div class="py-4 widthl">
-                    <a href="flex flex-col">
+                    <a href="playtab.html?video=Iry8fAYMD48" class="flex flex-col">
                         <div class="">
                             <img src="images/thumbnails/t2.png" alt="" class="w-full rounded-2xl">
                         </div>
@@ -385,7 +355,7 @@
                     </a>
                 </div>
                 <div class="py-4 widthl">
-                    <a href="flex flex-col">
+                    <a href="playtab.html?video=Iry8fAYMD48" class="flex flex-col">
                         <div class="">
                             <img src="images/thumbnails/t8.png" alt="" class="w-full rounded-2xl">
                         </div>
@@ -402,7 +372,7 @@
                     </a>
                 </div>
                 <div class="py-4 widthl">
-                    <a href="flex flex-col">
+                    <a href="playtab.html?video=Iry8fAYMD48" class="flex flex-col">
                         <div class="">
                             <img src="images/thumbnails/t4.png" alt="" class="w-full rounded-2xl">
                         </div>
@@ -419,7 +389,7 @@
                     </a>
                 </div>
                 <div class="py-4 widthl">
-                    <a href="flex flex-col">
+                    <a href="playtab.html?video=Iry8fAYMD48" class="flex flex-col">
                         <div class="">
                             <img src="images/thumbnails/t6.png" alt="" class="w-full rounded-2xl">
                         </div>
@@ -436,7 +406,7 @@
                     </a>
                 </div>
                 <div class="py-4 widthl">
-                    <a href="flex flex-col">
+                    <a href="playtab.html?video=Iry8fAYMD48" class="flex flex-col">
                         <div class="">
                             <img src="images/thumbnails/t7.png" alt="" class="w-full rounded-2xl">
                         </div>
@@ -453,7 +423,7 @@
                     </a>
                 </div>
                 <div class=" widthl">
-                    <a href="flex flex-col">
+                    <a href="playtab.html?video=Iry8fAYMD48" class="flex flex-col">
                         <div class="">
                             <img src="images/thumbnails/t5.png" alt="" class="w-full rounded-2xl">
                         </div>
@@ -470,7 +440,7 @@
                     </a>
                 </div>
                 <div class="py-4 widthl">
-                    <a href="flex flex-col">
+                    <a href="playtab.html?video=Iry8fAYMD48" class="flex flex-col">
                         <div class="">
                             <img src="images/thumbnails/t1.png" alt="" class="w-full rounded-2xl">
                         </div>
@@ -487,7 +457,7 @@
                     </a>
                 </div>
                 <div class="py-4 widthl">
-                    <a href="flex flex-col">
+                    <a href="playtab.html?video=Iry8fAYMD48" class="flex flex-col">
                         <div class="">
                             <img src="images/thumbnails/t2.png" alt="" class="w-full rounded-2xl">
                         </div>
@@ -504,7 +474,7 @@
                     </a>
                 </div>
                 <div class="py-4 widthl">
-                    <a href="flex flex-col">
+                    <a href="playtab.html?video=Iry8fAYMD48" class="flex flex-col">
                         <div class="">
                             <img src="images/thumbnails/t8.png" alt="" class="w-full rounded-2xl">
                         </div>
@@ -521,7 +491,7 @@
                     </a>
                 </div>
                 <div class="py-4 widthl">
-                    <a href="flex flex-col">
+                    <a href="playtab.html?video=Iry8fAYMD48" class="flex flex-col">
                         <div class="">
                             <img src="images/thumbnails/t4.png" alt="" class="w-full rounded-2xl">
                         </div>
@@ -538,7 +508,7 @@
                     </a>
                 </div>
                 <div class="py-4 widthl">
-                    <a href="flex flex-col">
+                    <a href="playtab.html?video=Iry8fAYMD48" class="flex flex-col">
                         <div class="">
                             <img src="images/thumbnails/t6.png" alt="" class="w-full rounded-2xl">
                         </div>
@@ -555,7 +525,7 @@
                     </a>
                 </div>
                 <div class="py-4 widthl">
-                    <a href="flex flex-col">
+                    <a href="playtab.html?video=Iry8fAYMD48" class="flex flex-col">
                         <div class="">
                             <img src="images/thumbnails/t7.png" alt="" class="w-full rounded-2xl">
                         </div>
@@ -572,7 +542,7 @@
                     </a>
                 </div>
                 <div class=" widthl">
-                    <a href="flex flex-col">
+                    <a href="playtab.html?video=Iry8fAYMD48" class="flex flex-col">
                         <div class="">
                             <img src="images/thumbnails/t5.png" alt="" class="w-full rounded-2xl">
                         </div>
@@ -589,7 +559,7 @@
                     </a>
                 </div>
                 <div class="py-4 widthl">
-                    <a href="flex flex-col">
+                    <a href="playtab.html?video=Iry8fAYMD48" class="flex flex-col">
                         <div class="">
                             <img src="images/thumbnails/t1.png" alt="" class="w-full rounded-2xl">
                         </div>
@@ -606,7 +576,7 @@
                     </a>
                 </div>
                 <div class="py-4 widthl">
-                    <a href="flex flex-col">
+                    <a href="playtab.html?video=Iry8fAYMD48" class="flex flex-col">
                         <div class="">
                             <img src="images/thumbnails/t2.png" alt="" class="w-full rounded-2xl">
                         </div>
@@ -640,7 +610,7 @@
                     </a>
                 </div>
                 <div class="py-4 widthl">
-                    <a href="flex flex-col">
+                    <a href="playtab.html?video=Iry8fAYMD48" class="flex flex-col">
                         <div class="">
                             <img src="images/thumbnails/t4.png" alt="" class="w-full rounded-2xl">
                         </div>
@@ -657,7 +627,7 @@
                     </a>
                 </div>
                 <div class="py-4 widthl">
-                    <a href="flex flex-col">
+                    <a href="playtab.html?video=Iry8fAYMD48" class="flex flex-col">
                         <div class="">
                             <img src="images/thumbnails/t6.png" alt="" class="w-full rounded-2xl">
                         </div>
@@ -674,7 +644,7 @@
                     </a>
                 </div>
                 <div class="py-4 widthl">
-                    <a href="flex flex-col">
+                    <a href="playtab.html?video=Iry8fAYMD48" class="flex flex-col">
                         <div class="">
                             <img src="images/thumbnails/t7.png" alt="" class="w-full rounded-2xl">
                         </div>
