youtube webpage update 2

--- a/TailWindProject2/index.html
+++ b/TailWindProject2/index.html
@@ -50,11 +50,18 @@
                 <input type="text"
                     class="w-2/3 h-8 px-3 border border-black rounded-full sm:h-10 focus:border-gray-800 cursor-text"
                     placeholder="Search here...">
-                <div class="w-10 border rounded-full"><a href="index.html"><img src="images/Microphone.png" alt=""
-                            class="sm:p-1"></a></div>
+                    <div class="flex items-center justify-center w-10 h-10 p-1 ml-2 border rounded-full sm:w-12 sm:h-12 sm:border sm:ml-1 sm:p-0">
+                        <a href="index.html" class="flex items-center justify-center w-full h-full">
+                            <img src="images/Microphone.png" alt="Microphone"
+                                class="object-center w-4 h-4 sm:w-3 sm:h-3">
+                        </a>
+                    </div>
             </div>
-            <div class="items-end justify-center pt-2 pr-4 sm:pr-9"><a href="" class=""><i style='font-size:24px'
-                        class='fa height'>&#xf2bd;</i></a>User</div>
+            <div class="flex flex-col items-center justify-center pt-4 sm:pr-20">
+                <a href="#" class="flex flex-col items-center">
+                    <i class="w-10 h-10 text-5xl fa fa-user"></i>
+                </a>
+            </div>
         </div>
     </div>
     <div class="flex pt-20">
@@ -314,7 +321,7 @@
                                         class="h-10 rounded-full "></div>
                                 <div class="text-start">
                                     <h2>Learn Full Stack Java</h2>
-                                    <h2>Telusko</h2>
+                                    <h2 class="font-semibold">Telusko</h2>
                                 </div>
                             </a>
                         </div>
@@ -331,7 +338,7 @@
                                         class="h-10 rounded-full"></div>
                                 <div class="w-full text-start">
                                     <h2>You must know</h2>
-                                    <h2>Secret Ingredient</h2>
+                                    <h2 class="font-semibold">Secret Ingredient</h2>
                                 </div>
                             </a>
                         </div>
@@ -348,7 +355,7 @@
                                         class="h-10 rounded-full"></div>
                                 <div class="text-start">
                                     <h2>CS basics</h2>
-                                    <h2>Computer Science</h2>
+                                    <h2 class="font-semibold">Computer Science</h2>
                                 </div>
                             </a>
                         </div>
@@ -365,7 +372,7 @@
                                         class="h-10 rounded-full"></div>
                                 <div class="text-start">
                                     <h2>Web development(HTML,CSS)</h2>
-                                    <h2>Web Dev</h2>
+                                    <h2 class="font-semibold">Web Dev</h2>
                                 </div>
                             </a>
                         </div>
@@ -382,7 +389,7 @@
                                         class="h-10 rounded-full"></div>
                                 <div class="text-start">
                                     <h2>HTML,CSS,JavaScript</h2>
-                                    <h2>Front End</h2>
+                                    <h2 class="font-semibold">Front End</h2>
                                 </div>
                             </a>
                         </div>
@@ -399,7 +406,7 @@
                                         class="h-10 rounded-full"></div>
                                 <div class="text-start">
                                     <h2>Learn Core Java (L-4)</h2>
-                                    <h2>Java Dev</h2>
+                                    <h2 class="font-semibold">Java Dev</h2>
                                 </div>
                             </a>
                         </div>
@@ -416,7 +423,7 @@
                                         class="h-10 rounded-full "></div>
                                 <div class="text-start">
                                     <h2>Java Fundamentals</h2>
-                                    <h2>Telusko</h2>
+                                    <h2 class="font-semibold">Telusko</h2>
                                 </div>
                             </a>
                         </div>
@@ -433,7 +440,7 @@
                                         class="h-10 rounded-full "></div>
                                 <div class="text-start">
                                     <h2>Learn Full Stack Java</h2>
-                                    <h2>Telusko</h2>
+                                    <h2 class="font-semibold">Telusko</h2>
                                 </div>
                             </a>
                         </div>
@@ -450,7 +457,7 @@
                                         class="h-10 rounded-full"></div>
                                 <div class="w-full text-start">
                                     <h2>You must know</h2>
-                                    <h2>Secret Ingredient</h2>
+                                    <h2 class="font-semibold">Secret Ingredient</h2>
                                 </div>
                             </a>
                         </div>
@@ -467,7 +474,7 @@
                                         class="h-10 rounded-full"></div>
                                 <div class="text-start">
                                     <h2>CS basics</h2>
-                                    <h2>Computer Science</h2>
+                                    <h2 class="font-semibold">Computer Science</h2>
                                 </div>
                             </a>
                         </div>
@@ -484,7 +491,7 @@
                                         class="h-10 rounded-full"></div>
                                 <div class="text-start">
                                     <h2>Web development(HTML,CSS)</h2>
-                                    <h2>Web Dev</h2>
+                                    <h2 class="font-semibold">Web Dev</h2>
                                 </div>
                             </a>
                         </div>
@@ -501,7 +508,7 @@
                                         class="h-10 rounded-full"></div>
                                 <div class="text-start">
                                     <h2>HTML,CSS,JavaScript</h2>
-                                    <h2>Front End</h2>
+                                    <h2 class="font-semibold">Front End</h2>
                                 </div>
                             </a>
                         </div>
@@ -518,7 +525,7 @@
                                         class="h-10 rounded-full"></div>
                                 <div class="text-start">
                                     <h2>Learn Core Java (L-4)</h2>
-                                    <h2>Java Dev</h2>
+                                    <h2 class="font-semibold">Java Dev</h2>
                                 </div>
                             </a>
                         </div>
@@ -535,7 +542,7 @@
                                         class="h-10 rounded-full "></div>
                                 <div class="text-start">
                                     <h2>Java Fundamentals</h2>
-                                    <h2>Telusko</h2>
+                                    <h2 class="font-semibold">Telusko</h2>
                                 </div>
                             </a>
                         </div>
@@ -552,7 +559,7 @@
                                         class="h-10 rounded-full "></div>
                                 <div class="text-start">
                                     <h2>Learn Full Stack Java</h2>
-                                    <h2>Telusko</h2>
+                                    <h2 class="font-semibold">Telusko</h2>
                                 </div>
                             </a>
                         </div>
@@ -569,7 +576,7 @@
                                         class="h-10 rounded-full"></div>
                                 <div class="w-full text-start">
                                     <h2>You must know</h2>
-                                    <h2>Secret Ingredient</h2>
+                                    <h2 class="font-semibold">Secret Ingredient</h2>
                                 </div>
                             </a>
                         </div>
@@ -586,7 +593,7 @@
                                         class="h-10 rounded-full"></div>
                                 <div class="text-start">
                                     <h2>CS basics</h2>
-                                    <h2>Computer Science</h2>
+                                    <h2 class="font-semibold">Computer Science</h2>
                                 </div>
                             </a>
                         </div>
@@ -603,7 +610,7 @@
                                         class="h-10 rounded-full"></div>
                                 <div class="text-start">
                                     <h2>Web development(HTML,CSS)</h2>
-                                    <h2>Web Dev</h2>
+                                    <h2 class="font-semibold">Web Dev</h2>
                                 </div>
                             </a>
                         </div>
@@ -620,7 +627,7 @@
                                         class="h-10 rounded-full"></div>
                                 <div class="text-start">
                                     <h2>HTML,CSS,JavaScript</h2>
-                                    <h2>Front End</h2>
+                                    <h2 class="font-semibold">Front End</h2>
                                 </div>
                             </a>
                         </div>
@@ -637,7 +644,7 @@
                                         class="h-10 rounded-full"></div>
                                 <div class="text-start">
                                     <h2>Learn Core Java (L-4)</h2>
-                                    <h2>Java Dev</h2>
+                                    <h2 class="font-semibold">Java Dev</h2>
                                 </div>
                             </a>
                         </div>
@@ -654,7 +661,7 @@
                                         class="h-10 rounded-full "></div>
                                 <div class="text-start">
                                     <h2>Java Fundamentals</h2>
-                                    <h2>Telusko</h2>
+                                    <h2 class="font-semibold">Telusko</h2>
                                 </div>
                             </a>
                         </div>
